Update README Node Ver, add commonjs type to fix dev error.

--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "test": "jest --verbose",
-    "create-test-db": "psql -f ./db/data/test/create-test-db.sql"
+    "create-test-db": "psql -f ./db/data/test/create-test-db.sql",
+    "seed-test-db": "node ./db/data/test/seed-testDb"
   },
   "repository": {
     "type": "git",
