--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "dependencies": {
     "dotenv": "^16.5.0",
-    "pg": "^8.15.6"
+    "pg": "^8.15.6",
+    "pg-format": "^1.0.4"
   },
   "jest": {
     "setupFilesAfterEnv": [
