Add GET endpoint for properties, error handling to come after lecture catchup

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
+    "dev": "nodemon ./server/listen.js",
     "test": "jest app --verbose",
     "test-utils": "jest utils --verbose",
     "create-test-db": "psql -f ./db/data/test/create-db.sql",
