--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "supertest": "^7.1.1"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "pg": "^8.15.6",
